syntax = "proto3";

package user;


service UserService {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);

}

// Request to create a profile
message CreateProfileRequest {
  int32 userId      = 1;
  string email      = 2;
  string role       = 3;  // "RIDER" | "DRIVER" | "ADMIN"
  string firstName  = 4;
  string lastName   = 5;
  string profilePhoto = 6;
  string bio        = 7;
  string address    = 8;
}


// Response to create a profile
message CreateProfileResponse {
  bool success    = 1;
  string message  = 2;
  int32 profileId = 3;
}


